--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -4,14 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Link Checker</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-    Check Your Link Here!:
-    <form action="/check-link" method="post" id="form">
-        <input name="url" placeholder="Enter your link here" id="url" /> <br />
-        <button type="button" onclick="checkValidLink()">Check it please!</button>
-    </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="py-5"><h1>Simple Link Checker</h1></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+            
+                <form action="/check-link" method="post" id="form" class="form">
+                    <div class="form-group">
+                        <input class="form-control" name="url" placeholder="Enter your link here" id="url" />
+                    </div>
+                    <div class="mx-auto" style="width: 200px;">
+                        <button class="btn btn-primary btn-block" type="button" onclick="checkValidLink()">Check it please!</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script>
         function isValidURL(url) {
             const pattern = new RegExp(
