--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -11,10 +11,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="py-5"><h1>Simple Link Checker</h1></div>
+                <div class="py-5"><h1>WebShot</h1></div>
             </div>
         </div>
-        <div class="row">
+        <div class="row mb-3">
             <div class="col-lg-12">
             
                 <form action="/check-link" method="post" id="form" class="form">
@@ -25,6 +25,11 @@
                         <button class="btn btn-primary btn-block" type="button" onclick="checkValidLink()">Check it please!</button>
                     </div>
                 </form>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-lg-12" style="text-align: center;">
+                &copy; @padejar 2023
             </div>
         </div>
     </div>
