--- a/src/templates/result.ejs
+++ b/src/templates/result.ejs
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row mb-3">
             <div class="col-lg-12">
                 <h3 class="header">Here's the result</h3>
                 
@@ -28,6 +28,11 @@
                 <div style="text-align: center;">
                     <a href="/">Check another link</a>
                 </div>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-lg-12" style="text-align: center;">
+                &copy; padejar 2023
             </div>
         </div>
     </div>
